feat: added constants, basic loding page ,and hardcoded api routes

--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
     "paths": {
+      "@constants/*": ["./src/constants/*"],
+      "@lib/*": ["./src/lib/*"],
       "@/*": ["./src/*"]
     }
   }
